Add me dashboard and course metadata commands